--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/src/images/Add a heading (4).png"
+      href="./src/images/devchallenges.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
